<resources>
    <string name="app_name">Fairfax Baptist Temple Card</string>
    <string name="logo">Fairfax Baptist Temple logo</string>
    <string name="missions">Fairfax Baptist Temple missions</string>
    <string name="moto">Glorify God. Evangelize the World.</string>
    <string name="stimes">SUNDAY 9am 10am 5pm \nWEDNESDAY 7pm</string>
    <string name="address">Fairfax Baptist Temple | 6401 Missionary Lane, Fairfax Station, VA 22039 | 703&#x2013;323&#x2013;8100</string>
</resources>
