<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    android:background="@drawable/header"
    tools:context="com.example.android.fairfaxbaptisttemplecard.MainActivity"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:orientation="vertical"
    >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moto"
            android:textSize="25sp"
            android:textColor="#bb0000"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="bold"
            android:maxLines="2"
            android:gravity="center_horizontal"
        />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:contentDescription="@string/missions"
            android:scaleType="center"
            android:src="@drawable/missions"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/stimes"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#bb0000"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:maxLines="2"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#bb0000"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:maxLines="3"
            android:gravity="center_horizontal"
        />
    </LinearLayout>
</ScrollView>
